# lget

./: .gitignore  .gitmodules  .npmignore  Cargo.toml  Justfile  README.md  flake.nix  package-lock.json  package.json
.github/workflows/: release.yml
assets/: demo.tape
npm/: install.js  wrapper.js
src/: args.rs  error.rs  license.rs  main.rs  utils.rs
