[package]
name = "lget"
version = "0.1.0"
edition = "2024"
description = "A fast and interactive CLI tool to download open-source licenses from SPDX"
license = "MIT"
repository = "https://github.com/pencelheimer/lget"
readme = "README.md"
keywords = ["cli", "license", "spdx", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
cliclack = { version = "0.5.4" }
ctrlc = "3.5.2"
thiserror = "2.0.18"
ureq = "3.3.0"
